<resources>
    <string name="app_name">Sofia Tour Guide</string>
    <string name="action_settings">Settings</string>
    <string name="logo">logo</string>
    <string name="welcome">Welcome to Sofia</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_attractions">Attractions</string>
    <string name="title_activity_museum">Museums</string>
    <string name="title_activity_top">Top 10</string>
    <string name="arrow_right">arrow right</string>
    <string name="museum_image">museum image</string>
    <string name="visit_sofia_link"><a href="http://visitsofia.bg/en/">visitsofia.bg/en/</a></string>
    <string name="title_activity_nim">National History Museum</string>
    <string name="nim_link"><a href="http://www.historymuseum.org/en/">www.historymuseum.org/en/</a></string>
    <string name="title_activity_basilica">St. Sophia Basilica</string>
    <string name="basilica">+35924164077</string>
    <string name="title_activity_mainmap">Map</string>
    <string name="title_activity_nim_map">Nim Location</string>
    <string name="title_activity_basilica_map">Basilica Location</string>
    <string name="title_activity_ethnographic_institute"> National Gallery</string>
    <string name="ethmo_link"><a href="http://www.nationalartgallerybg.org/index.php?l=62">www.nationalartgallerybg.org/index.php?l=62</a></string>
    <string name="title_activity_ethnographic_map">"Ethnographic Map "</string>
    <string name="title_activity_national_archaeological_museum">National Archaeological Museum</string>
    <string name="archaeological_link"><a href="http://naim.bg/en/home/">naim.bg/en/home/</a></string>
    <string name="title_activity_archaeological_map">Archaeological Map</string>
    <string name="title_activity_earth_and_man_museum">"Earth and Man National Museum"</string>
    <string name="earth_link"><a href="http://earthandman.org/">http://earthandman.org/</a></string>
    <string name="credits">Credits</string>
    <string name="title_activity_military_history">"Museum of Military History"</string>
    <string name="military_link"><a href="http://www.militarymuseum.bg/index-en.html">www.militarymuseum.bg/index-en.html</a></string>
    <string name="title_activity_socialist_art">"Museum of Socialist Art"</string>
    <string name="socialist_link"><a href="http://nationalartgallerybg.org/index.php?l=159/">http://nationalartgallerybg.org/index.php?l=159</a></string>
    <string name="title_activity_contemporary_art">"Museum of Contemporary Art"</string>
    <string name="contemporary_link"><a href="http://www.samcaproject.org/?lang=en-US">http://www.samcaproject.org/?lang=en-US</a></string>
    <string name="title_activity_galleries">Galleries</string>
    <string name="title_activity_crypt">Crypt of St. Aleksander Nevski Cathedral</string>
    <string name="title_activity_square">National Gallery – Square 500</string>
    <string name="title_activity_temples">Temples</string>
    <string name="title_activity_alexander_nevsky">"St. Alexander Nevsky Cathedral"</string>
    <string name="title_activity_bashi_mosque">"Banya-Bashi Mosque"</string>
    <string name="title_activity_boyana_church">"Boyana Church"</string>
    <string name="boyana_link"><a href="http://www.boyanachurch.org/indexen.htm">www.boyanachurch.org/indexen.htm</a></string>
    <string name="title_activity_cathedral">"Catholic Cathedral of St. Joseph "</string>
    <string name="cathedral_link"><a href="http://sofia.capucini.bg/index.php?lang=en">sofia.capucini.bg/index.php?lang=en</a></string>
    <string name="title_activity_nedelya_church">St. Nedelya Church</string>
    <string name="nedelya_link"><a href="www.sveta-nedelia.org/">www.sveta-nedelia.org/</a></string>
    <string name="title_activity_russian_church">"Russian Church "</string>
    <string name="title_activity_sofia_synagogue">Sofia Synagogue</string>
    <string name="synagogue_link"><a href="http://www.sofiasynagogue.com">www.sofiasynagogue.com</a></string>
    <string name="title_activity_sophia_church">St. Sophia Church</string>
    <string name="title_activity_george">"Rotunda of St. George "</string>
    <string name="george_link"><a href="http://www.svgeorgi-rotonda.com/index.php?lang=en">www.svgeorgi-rotonda.com/index.php?lang=en</a></string>
    <string name="title_activity_paraskeva">"Church of St. Paraskeva "</string>
    <string name="title_activity_romanian">Romanian Orthodox Church</string>
    <string name="title_activity_monasteries">Monasteries</string>
    <string name="title_activity_archaeological">Archaeological monuments</string>
    <string name="title_activity_amphitheater">Amphitheater of Serdica</string>
    <string name="amphitheater_link"><a href="http://www.arenadiserdica.com/en/index.html">www.arenadiserdica.com/en/index.html</a></string>
    <string name="title_activity_ancient_serdica_east_gate">"Ancient Serdica - East Gate "</string>
    <string name="serdica_link"><a href="http://ulpiaserdica.com/index_en.html">ulpiaserdica.com/index_en.html</a></string>
    <string name="title_activity_ancient_serdica_north_wall">"Ancient Serdica - North wall"
    </string>
    <string name="title_activity_serdica_city_centre">"Ancient Serdica - City centre "</string>
    <string name="serdica_center">Ancient Serdica - remains of the Roman city centre</string>
    <string name="title_activity_ancient_serdica_roman_baths">"Ancient Serdica - Roman baths and a temple"
    </string>
    <string name="title_activity_architectural_monuments">Architectural monuments</string>
    <string name="title_activity_seminary">Seminary</string>
    <string name="seminary_link"><a href="http://sofia-seminaria.org">sofia-seminaria.org</a></string>
    <string name="title_activity_monuments">Monuments</string>
    <string name="title_activity_saint_sophia">The Statue of Saint Sophia</string>
    <string name="st_sofia">Saint Sophia</string>
    <string name="title_activity_battenberg_mausoleum">The Memorial Tomb of Alexander I</string>
    <string name="battenberg">The Memorial Tomb of Alexander I of Battenberg</string>
    <string name="title_activity_squares">Squares and bridges</string>
    <string name="title_activity_lion_bridge">Lion Bridge</string>
    <string name="lion_bridge" />
    <string name="title_activity_eagle">Eagle Bridge</string>
    <string name="eagle_bridge" />
    <string name="title_activity_petko_slaveykov">Petko Slaveykov Square</string>
    <string name="petko_slaveykov_square" />
    <string name="title_activity_banski_square">Banski Square</string>
    <string name="banski_square" />
    <string name="title_activity_garibaldi_square">Garibaldi Square</string>
    <string name="garibaldi_square" />
    <string name="title_activity_iseful_information">Iseful Information</string>
    <string name="title_activity_practical_information">Practical information</string>
    <string name="practical_information">Practical information</string>
    <string name="title_activity_about_bulgaria">About Sofia</string>
    <string name="about_bulgaria">Sofia is the largest city and the capital of Bulgaria, as well as the 15th largest city in the European Union with a population of 1,291,591 people. Sofia is a cosmopolitan city of different nationalities and cultures. They elegantly coexist in the historic downtown, which has become a kind of open-air museum with preserved remains of ancient civilizations.\n\n
        \n<b>HISTORY</b>\n\n
        \nSofia is one of the oldest European capitals. Its history dates back to ca 7th millennium BC. In 6th–5th century BC, there there had been a Neolithic settlement here. In the 8th century BC, the Thracian tribe of the Serds settled around the thermal springs in the present-day downtown. Their settlement was called Serdonpolis. At the beginning of the 1st century AD, the Romans took the city and it became an administrative centre in the province of Thrace under the name of Serdica, and was later renamed Ulpia Serdica in honour of Emperor Trajan Marcus Ulpius. At the end of the 3rd century AD, it became the capital of the province of Inner Dacia. The city suffered the incursions of Huns, Goths and other barbarian tribes in the 5th–6th century period. In AD 809, it became part of the Bulgarian state and because of its central location received the name Sredets. In the 1018–1194-period the city was included in the territory of the Byzantine Empire under the name of Triaditsa. Later, it was called Sofia. The oldest source mentioning the modern name of the city is a charter from 1382, presented by Tsar Ivan Shishman to the Dragalevtsi Monastery. From the 14th century onwards, until 4 January 1878 the city was part of the Ottoman Empire. Sofia was liberated by the Russian army under the command of General Gurko. On 3 April 1879, on a proposal of Professor Marin Drinov, Bulgarian historian, the Constitutive Assembly in Veliko Tarnovo designated the city for a capital of the Principality of Bulgaria.\n\n
        \n<b>LOCATION</b>\n\n
        \nSofia is located at about 550 m asl, in the foothill of the northern slope of the Vitosha, in the Sofia plain enclosed by mountains on all sides. As early as Antiquity, the five mountain passes leading to the city (Iskar, Vladaya Dragoman, Petrohan and Botevgrad) and the roads passing there connected the Adriatic and Central Europe with the Black and Aegean Seas and the Middle East. Thanks to its central position in the Balkans, Sofia is a large and flourishing city to this day. Since the remote past the city is known for its numerous hot and cold mineral springs (15 fields with a total output of mineral water of 130 l/sec). The Iskar, the longest river running entirely in the territory of Bulgaria, traverses the city.\n\n
        \n<b>CLIMATE</b>\n\n
        \nThe climate of Sofia is temperate continental. The city is protected from strong winds by the mountains that surround it. The rainfall balance can be characterized as normal, which is a precondition for various outdoor activities throughout the year.\n    </string>
    <string name="title_activity_language">Language</string>
</resources>